--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>tu.email@ejemplo.com</span>
+                            <span>g.ramos.lopez98@gmail</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
