--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>tu.email@ejemplo.com</span>
+                            <span>gramosvuelve@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
