Update project link to point to marca.com

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="project-image">
                         <img src="https://via.placeholder.com/400x300/667eea/ffffff?text=Proyecto+1" alt="Proyecto 1">
                         <div class="project-overlay">
-                            <a href="#" class="project-link" target="_blank">
+                            <a href="https://www.marca.com/" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                             <a href="https://github.com" class="project-link" target="_blank">
